--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Gamer</title>
+    <!-- Font awesome  -->
+    <script
+      src="https://kit.fontawesome.com/d24c534d38.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Fav icon -->
+    <link rel="icon" type="image/x-icon" href="/images/Frame.png" />
     <!-- Main styles -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/main.css" />
     <!-- Responsive styles -->
-    <link rel="stylesheet" href="styles/responsive.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles/responsive.css" />
+  </head>
+  <body>
+    <header>
+      <!-- Navbar Start Here -->
+      <nav>
+        <div class="logo">
+          <img src="images/Frame.png" alt="" />
+          <h1><span class="letter-g">G</span>amer</h1>
+        </div>
+        <ul>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Developers</a></li>
+          <li class="follow-us">
+            <p>Follow Us On</p>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a href=""><i class="fa-brands fa-tiktok"></i></a>
+          </li>
+        </ul>
+      </nav>
+      <!-- Navbar End Here -->
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
