banner section done

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gamer</title>
+    <title>Gamer Zone</title>
     <!-- Font awesome  -->
     <script
       src="https://kit.fontawesome.com/d24c534d38.js"
       crossorigin="anonymous"
     ></script>
     <!-- Fav icon -->
-    <link rel="icon" type="image/x-icon" href="/images/Frame.png" />
+    <link rel="icon" type="image/x-icon" href="/images/frame.png" />
     <!-- Main styles -->
     <link rel="stylesheet" href="styles/main.css" />
     <!-- Responsive styles -->
@@ -35,6 +35,28 @@
         </ul>
       </nav>
       <!-- Navbar End Here -->
+
+      <!-- banner Start here -->
+      <section class="banner-container">
+        <div class="banner-content-bg">
+         <div class="banner-content">
+            <h1>
+                PLAY LIKE THE <br />
+                <span class="goat">G.O.A.T</span>
+              </h1>
+              <p class="txt-color">1-Click instant play</p>
+              <p class="txt-color">No Download</p>
+              <p class="txt-color">1000s of supported online games</p>
+              <div class="banner-content-buttons">
+                <button class="btn btn-sign-in">SIGN IN</button>
+                <button class="btn btn-go-rogue">GO ROGUE</button>
+              </div>
+         </div>
+        </div>
+
+        <img src="images/group_18.png" alt="" />
+      </section>
+      <!-- banner end here -->
     </header>
     <main></main>
     <footer></footer>
