--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Fav icon -->
-    <link rel="icon" type="image/x-icon" href="/images/frame.png" />
+    <link rel="icon" type="image/x-icon" href="images/frame.png" />
     <!-- Main styles -->
     <link rel="stylesheet" href="styles/main.css" />
     <!-- Responsive styles -->
@@ -39,19 +39,19 @@
       <!-- banner Start here -->
       <section class="banner-container">
         <div class="banner-content-bg">
-         <div class="banner-content">
+          <div class="banner-content">
             <h1>
-                PLAY LIKE THE <br />
-                <span class="goat">G.O.A.T</span>
-              </h1>
-              <p class="txt-color">1-Click instant play</p>
-              <p class="txt-color">No Download</p>
-              <p class="txt-color">1000s of supported online games</p>
-              <div class="banner-content-buttons">
-                <button class="btn btn-sign-in">SIGN IN</button>
-                <button class="btn btn-go-rogue">GO ROGUE</button>
-              </div>
-         </div>
+              PLAY LIKE THE <br />
+              <span class="goat">G.O.A.T</span>
+            </h1>
+            <p class="txt-color">1-Click instant play</p>
+            <p class="txt-color">No Download</p>
+            <p class="txt-color">1000s of supported online games</p>
+            <div class="banner-content-buttons">
+              <button class="btn btn-sign-in">SIGN IN</button>
+              <button class="btn btn-go-rogue">GO ROGUE</button>
+            </div>
+          </div>
         </div>
 
         <img src="images/group_18.png" alt="" />
