--- a/index.html
+++ b/index.html
@@ -58,7 +58,18 @@
       </section>
       <!-- banner end here -->
     </header>
-    <main></main>
+    <main>
+        <section class="gamer-container">
+            <img src="images/pngwing_4.png" alt="">
+            <div class="gamer-content">
+                <h1>We are gamer</h1>
+                <p class="txt-color">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                <button class="btn btn-sign-in">KNOW MORE</button>
+                <p>Our purpose...</p>
+                <h3>"unleash the gamer in everyone"</h3>
+            </div>
+        </section>
+    </main>
     <footer></footer>
   </body>
 </html>
