--- a/index.html
+++ b/index.html
@@ -59,16 +59,75 @@
       <!-- banner end here -->
     </header>
     <main>
-        <section class="gamer-container">
-            <img src="images/pngwing_4.png" alt="">
-            <div class="gamer-content">
-                <h1>We are gamer</h1>
-                <p class="txt-color">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
-                <button class="btn btn-sign-in">KNOW MORE</button>
-                <p>Our purpose...</p>
-                <h3>"unleash the gamer in everyone"</h3>
+      <!-- gamer section start here -->
+      <section class="gamer-container">
+        <img src="images/pngwing_4.png" alt="" />
+        <div class="gamer-content">
+          <h1 class="gradient-header">We are gamer</h1>
+          <p class="txt-color">
+            An international digital games and entertainment company. We
+            develop, publish and distribute multiplayer mobile games. We reach
+            over 400 million players each month and our audience keeps growing.
+          </p>
+          <button class="btn btn-sign-in">KNOW MORE</button>
+          <p>Our purpose...</p>
+          <h3>"unleash the gamer in everyone"</h3>
+        </div>
+      </section>
+      <!-- gamer section end here -->
+
+      <!-- funny videos section start here -->
+      <section class="funny-videos-container">
+        <h1>Online Games <span class="gradient-header">Funny Videos</span></h1>
+        <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        <div class="cards-container">
+          <div class="card">
+            <div class="card-content">
+              <img src="images/rectangle_4.png" alt="" />
+              <div class="overlay">
+                <i class="fa-solid fa-circle-play"></i>
+                <p class="watch-now">Watch Now</p>
+              </div>
             </div>
-        </section>
+            <p class="txt-color">
+              No Download. No Installs. Play games Instantly on Gamer.
+            </p>
+          </div>
+          <div class="card">
+            <div class="card-content">
+              <img src="images/rectangle_5.png" alt="" />
+              <div class="overlay">
+                <i class="fa-solid fa-circle-play"></i>
+                <p class="watch-now">Watch Now</p>
+              </div>
+            </div>
+            <p class="txt-color">Did you score? #unblockedgames #school</p>
+          </div>
+          <div class="card">
+            <div class="card-content">
+              <img src="images/rectangle_7.png" alt="" />
+              <div class="overlay">
+                <i class="fa-solid fa-circle-play"></i>
+                <p class="watch-now">Watch Now</p>
+              </div>
+            </div>
+            <p class="txt-color">Breaking game records like OG</p>
+          </div>
+          <div class="card">
+            <div class="card-content">
+              <img src="images/rectangle_6.png" alt="" />
+              <div class="overlay">
+                <i class="fa-solid fa-circle-play"></i>
+                <p class="watch-now">Watch Now</p>
+              </div>
+            </div>
+            <p class="txt-color">
+              Busted gaming on school laptop, but you are still lit.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- funny videos section end here -->
     </main>
     <footer></footer>
   </body>
