play instantly done

--- a/index.html
+++ b/index.html
@@ -128,6 +128,20 @@
         </div>
       </section>
       <!-- funny videos section end here -->
+
+
+      <!-- play instantly section start here -->
+      <section class="play-instantly">
+        <div class="play-instant-text-content">
+          <h1><span class="gradient-header">Play Instantly</span> <br>No Downloads <br> No Installs.</h1>
+          <p class="txt-color">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+        </div>
+        <div class="play-instant-img-content">
+          <img class="img-top" src="images/rectangle_55.png" alt="">
+          <img class="img-bottom" src="images/rectangle_66.png" alt="">
+        </div>
+      </section>
+      <!-- play instantly section end here -->
     </main>
     <footer></footer>
   </body>
