careers section done

--- a/index.html
+++ b/index.html
@@ -129,19 +129,63 @@
       </section>
       <!-- funny videos section end here -->
 
-
       <!-- play instantly section start here -->
       <section class="play-instantly">
         <div class="play-instant-text-content">
-          <h1><span class="gradient-header">Play Instantly</span> <br>No Downloads <br> No Installs.</h1>
-          <p class="txt-color">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+          <h1>
+            <span class="gradient-header">Play Instantly</span> <br />No
+            Downloads <br />
+            No Installs.
+          </h1>
+          <p class="txt-color">
+            Play games online for free without downloading. Just click the Play
+            button and play instantly in your browser.
+          </p>
         </div>
         <div class="play-instant-img-content">
-          <img class="img-top" src="images/rectangle_55.png" alt="">
-          <img class="img-bottom" src="images/rectangle_66.png" alt="">
+          <img class="img-top" src="images/rectangle_55.png" alt="" />
+          <img class="img-bottom" src="images/rectangle_66.png" alt="" />
         </div>
       </section>
       <!-- play instantly section end here -->
+
+      <!-- Career section start here -->
+      <section class="career-container">
+        <div class="career-content">
+          <h3>Careers</h3>
+          <p class="txt-color">
+            Gamer is driven to create the best and most fun games for our
+            millions of players all around the world, and we,re always on the
+            lookout for more top talent to join our growing team. If you,d like
+            to help us make great games and be a part of Gamers bright future,
+            we,d love to hear from you.
+          </p>
+          <div class="positions">
+            <div class="position-title">
+              <ul>
+                <li>Multimedia Artist +</li>
+                <li>Data Engineer +</li>
+                <li>Adroid Engineer +</li>
+                <li>Server Developer +</li>
+                <li>Group Financial Accountant +</li>
+                <li>Senior User Acuisition Specialist +</li>
+              </ul>
+            </div>
+            <div class="position-location">
+              <ul>
+                <li>Lisbon, Portugal</li>
+                <li>Lisbon, Portugal</li>
+                <li>Zoetermeer, Netherlands</li>
+                <li>Lisbon, Portugal</li>
+                <li>London, United Kingdom</li>
+                <li>Lisbon, Portugal</li>
+              </ul>
+            </div>
+          </div>
+          <div class="btn">SEE ALL POSITIONS</div>
+        </div>
+      </section>
+      <!-- Career section end here -->
     </main>
     <footer></footer>
   </body>
