--- a/index.html
+++ b/index.html
@@ -186,7 +186,53 @@
         </div>
       </section>
       <!-- Career section end here -->
+
+      <!-- Category section start here -->
+
+        <section class="category-container">
+          <div class="category">
+            <img src="images/rectangle_11.png" alt="" class="category-img">
+            <h4 class="title">Action Games</h4>
+          </div>
+          <div class="category">
+            <img src="images/rectangle_12.png" alt="" class="category-img">
+            <h4 class="title">Adeventure Games</h4>
+          </div>
+          <div class="category">
+            <img src="images/rectangle_13.png" alt="" class="category-img">
+            <h4 class="title">Arcade Games</h4>
+          </div>
+          <div class="category">
+            <img src="images/rectangle_14.png" alt="" class="category-img">
+            <h4 class="title">Educational Games</h4>
+          </div>
+          <div class="category">
+            <img src="images/rectangle_15.png" alt="" class="category-img">
+            <h4 class="title">Word Games</h4>
+          </div>
+          <div class="category">
+            <img src="images/rectangle_16.png" alt="" class="category-img">
+            <h4 class="title">Role Playing Games</h4>
+          </div>
+          <div class="category">
+            <img src="images/rectangle_17.png" alt="" class="category-img">
+            <h4 class="title">Music & Audio Games</h4>
+          </div>
+          <div class="category">
+            <img src="images/rectangle_18.png" alt="" class="category-img">
+            <h4 class="title">Puzzle Games</h4>
+          </div>
+          <div class="category">
+            <img src="images/rectangle_19.png" alt="" class="category-img">
+            <h4 class="title">Strategy Games</h4>
+          </div>
+     
+        </section>
+
+      <!-- Category section end  here -->
     </main>
-    <footer></footer>
+    <footer>
+      
+    </footer>
   </body>
 </html>
