--- a/index.html
+++ b/index.html
@@ -189,50 +189,82 @@
 
       <!-- Category section start here -->
 
-        <section class="category-container">
-          <div class="category">
-            <img src="images/rectangle_11.png" alt="" class="category-img">
-            <h4 class="title">Action Games</h4>
-          </div>
-          <div class="category">
-            <img src="images/rectangle_12.png" alt="" class="category-img">
-            <h4 class="title">Adeventure Games</h4>
-          </div>
-          <div class="category">
-            <img src="images/rectangle_13.png" alt="" class="category-img">
-            <h4 class="title">Arcade Games</h4>
-          </div>
-          <div class="category">
-            <img src="images/rectangle_14.png" alt="" class="category-img">
-            <h4 class="title">Educational Games</h4>
-          </div>
-          <div class="category">
-            <img src="images/rectangle_15.png" alt="" class="category-img">
-            <h4 class="title">Word Games</h4>
-          </div>
-          <div class="category">
-            <img src="images/rectangle_16.png" alt="" class="category-img">
-            <h4 class="title">Role Playing Games</h4>
-          </div>
-          <div class="category">
-            <img src="images/rectangle_17.png" alt="" class="category-img">
-            <h4 class="title">Music & Audio Games</h4>
-          </div>
-          <div class="category">
-            <img src="images/rectangle_18.png" alt="" class="category-img">
-            <h4 class="title">Puzzle Games</h4>
-          </div>
-          <div class="category">
-            <img src="images/rectangle_19.png" alt="" class="category-img">
-            <h4 class="title">Strategy Games</h4>
-          </div>
-     
-        </section>
+      <section class="category-container">
+        <div class="category">
+          <img src="images/rectangle_11.png" alt="" class="category-img" />
+          <h4 class="title">Action Games</h4>
+        </div>
+        <div class="category">
+          <img src="images/rectangle_12.png" alt="" class="category-img" />
+          <h4 class="title">Adeventure Games</h4>
+        </div>
+        <div class="category">
+          <img src="images/rectangle_13.png" alt="" class="category-img" />
+          <h4 class="title">Arcade Games</h4>
+        </div>
+        <div class="category">
+          <img src="images/rectangle_14.png" alt="" class="category-img" />
+          <h4 class="title">Educational Games</h4>
+        </div>
+        <div class="category">
+          <img src="images/rectangle_15.png" alt="" class="category-img" />
+          <h4 class="title">Word Games</h4>
+        </div>
+        <div class="category">
+          <img src="images/rectangle_16.png" alt="" class="category-img" />
+          <h4 class="title">Role Playing Games</h4>
+        </div>
+        <div class="category">
+          <img src="images/rectangle_17.png" alt="" class="category-img" />
+          <h4 class="title">Music & Audio Games</h4>
+        </div>
+        <div class="category">
+          <img src="images/rectangle_18.png" alt="" class="category-img" />
+          <h4 class="title">Puzzle Games</h4>
+        </div>
+        <div class="category">
+          <img src="images/rectangle_19.png" alt="" class="category-img" />
+          <h4 class="title">Strategy Games</h4>
+        </div>
+      </section>
 
       <!-- Category section end  here -->
     </main>
     <footer>
-      
+      <div class="logo">
+        <img src="images/Frame.png" alt="" />
+        <h1><span class="letter-g">G</span>amer</h1>
+      </div>
+      <div class="some-links">
+        <ul>
+          <li><a href="">Our Story</a></li>
+          <li><a href="">Games</a></li>
+          <li><a href="">Web Games</a></li>
+          <li><a href="">Careers</a></li>
+          <li><a href="">supported</a></li>
+          <li><a href="">My Account</a></li>
+        </ul>
+      </div>
+      <div class="social-links">
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-apple"></i>
+
+      </div>
+      <div class="more-links">
+        <ul>
+          <li><a href="">Terms and Conditions</a></li>
+          <li><a href="">Privacy Policy</a></li>
+          <li><a href="">Cookie Policy</a></li>
+          <li><a href="">Privacy Settings</a></li>
+        </ul>
+      </div>
+      <div class="copyright">
+        <p>Play Games &copy; Gamer &copy; 2000-2023 Gamer Bangladesh</p>
+      </div>
     </footer>
   </body>
 </html>
