--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Fav icon -->
-    <link rel="icon" type="image/x-icon" href="images/frame.png" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <!-- Main styles -->
     <link rel="stylesheet" href="styles/main.css" />
     <!-- Responsive styles -->
